# TensorRT-Model-Optimizer

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG-Windows.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_HEADER  README.md  README_r150.md  SECURITY.md  benchmark.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run_tp_test.sh  search.html  searchindex.js  setup.py  test.py  test_single.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/deployment/: 1_tensorrt_llm.doctree  1_tensorrt_llm_deployment.doctree  2_directml.doctree  2_directml_deployment.doctree  3_unified_hf.doctree
.doctrees/examples/: 0_all_examples.doctree  2_bert_prune_distill_quantize.doctree
.doctrees/getting_started/: 1_overview.doctree  2_installation.doctree  3_quantization.doctree  4_quantization_windows.doctree  5_pruning.doctree  6_distillation.doctree  6_sparsity.doctree  7_sparsity.doctree  _installation_for_Linux.doctree
.doctrees/guides/: 0_support_matrix.doctree  1_quantization.doctree  2_pruning.doctree  3_nas.doctree  4_distillation.doctree  5_sparsity.doctree  6_save_load.doctree  7_speculative_decoding.doctree  8_autocast.doctree  _basic_quantization.doctree  _choosing_quant_methods.doctree  _compress_quantized_models.doctree  _customized_model_quantization.doctree  _onnx_quantization.doctree  _pytorch_quantization.doctree
.doctrees/reference/: 0_changelog.doctree  0_versions.doctree  1_modelopt_api.doctree  _changelog_for_Linux.doctree  _changelog_for_Windows.doctree
.doctrees/support/: 1_contact.doctree  2_faqs.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_feature_request.md  3_question.md  get_system_info.py
.github/workflows/: _example_tests_runner.yml  _wait_for_checks.yml  close_inactive_issues_pr.yml  code_quality.yml  example_tests.yml  gpu_tests.yml  multi_version_unit_tests.yml  pages.yml  partial_unit_tests.yml  unit_tests.yml
.gitlab/: .gitlab-ci.yml  release.yml  tests.yml
_sources/: index.rst.txt
_sources/deployment/: 1_tensorrt_llm_deployment.rst.txt  2_directml_deployment.rst.txt  3_unified_hf.rst.txt
_sources/examples/: 0_all_examples.rst.txt  2_bert_prune_distill_quantize.rst.txt
_sources/getting_started/: 1_overview.rst.txt  2_installation.rst.txt  3_quantization.rst.txt  4_quantization_windows.rst.txt  5_pruning.rst.txt  6_distillation.rst.txt  6_sparsity.rst.txt  7_sparsity.rst.txt  _installation_for_Linux.rst.txt
_sources/guides/: 0_support_matrix.rst.txt  1_quantization.rst.txt  2_pruning.rst.txt  3_nas.rst.txt  4_distillation.rst.txt  5_sparsity.rst.txt  6_save_load.rst.txt  8_autocast.rst.txt  _basic_quantization.rst.txt  _compress_quantized_models.rst.txt  _customized_model_quantization.rst.txt  _onnx_quantization.rst.txt  _pytorch_quantization.rst.txt
_sources/reference/: 0_versions.rst.txt  1_modelopt_api.rst.txt
_sources/support/: 1_contact.rst.txt  2_faqs.rst.txt
_static/: copybutton.js  custom.css
chained_optimizations/: .gitignore  README.md  bert_prune_distill_quantize.py
chained_optimizations/scripts/: 1_prune.sh  2_int8_quantize.sh  3_onnx_export.sh
common/: dataset_utils.py
deployment/: 1_tensorrt_llm.html  1_tensorrt_llm_deployment.html  2_directml.html  2_directml_deployment.html  3_unified_hf.html
diffusers/: README.md  build_sdxl_8bit_engine.sh  quantize.py  requirements.txt  run_export.py  utils.py
diffusers/cache_diffusion/: README.md  benchmarks.py  example.ipynb  requirements.txt  run_cache_diffusion.py
diffusers/onnx_utils/: export.py  sdxl_fp8_graphsurgeon.py
diffusers/quantization/: .gitignore  README.md  config.py  (+7 more)
docker/: Dockerfile  Dockerfile.trt10  README.md  build.sh  build_trt10.sh
examples/: 0_all_examples.html  1_cifar_resnet.html  2_bert_prune_distill_quantize.html  README.md  benchmark.md
getting_started/: 1_overview.html  2_installation.html  3_quantization.html  4_quantization_windows.html  5_pruning.html  6_distillation.html  6_sparsity.html  7_sparsity.html  _installation_for_Linux.html
guides/: 0_support_matrix.html  1_quantization.html  2_pruning.html  3_nas.html  4_distillation.html  5_sparsity.html  6_save_load.html  7_speculative_decoding.html  8_autocast.html  _basic_quantization.html  _choosing_quant_methods.html  _compress_quantized_models.html  _customized_model_quantization.html  _onnx_quantization.html  _pytorch_quantization.html
llm_distill/: README.md  main.py  requirements.txt
llm_eval/: .gitignore  README.md  __init__.py  gen_model_answer.py  humaneval.py  lm_eval_hf.py  lm_eval_tensorrt_llm.py  mmlu.py  modeling.py  quantization_utils.py  requirements.txt  run_fastchat.sh
llm_ptq/: .gitignore  README.md  example_utils.py  hf_ptq.py  modelopt_to_tensorrt_llm.py  nemo_ptq.py  prepare_medusa.py  requirements.txt  run_tensorrt_llm.py
llm_qat/: README.md  launch.sh  main.py  requirements.txt  utils.py
llm_sparsity/: README.md  data_prep.py  eval.py  export_trtllm_ckpt.py  finetune.py  hf_pts.py  launch_finetune.sh  requirements.txt  utils.py
model_hub/: download_hf_ckpt.py  llama_fp8_deploy_trtllm.sh  llama_fp8_deploy_vllm.sh
modelopt/: __init__.py
onnx_ptq/: README.md  download_example_onnx.py  evaluate.py  evaluate_vit.py  evaluation.py  image_prep.py  infer_llama.py  python_plugin_example.py  quantize_llama.py  requirements.txt  trt_plugin_support_ort.py  trt_utils.py
plugins/: Makefile  Makefile.config
pruning/: README.md  cifar_resnet.ipynb
reference/: 0_changelog.html  0_versions.html  1_modelopt_api.html  _changelog_for_Linux.html  _changelog_for_Windows.html
speculative_decoding/: README.md  eagle_utils.py  example.ipynb  launch.sh  main.py  medusa_utils.py  prepare_data.sh  requirements.txt  utils.py  vllm_generate.py
support/: 1_contact.html  2_faqs.html
tests/: conftest.py
vlm_ptq/: .gitignore  README.md  requirements-llava.txt  requirements-vila.txt  vlm_run.py  vlm_visual_engine.py
windows/: Benchmark.md  README.md
(+1353 files in other folders)
